@@ -415,14 +415,21 @@ int g_3()
 test.run(stderr=TestSCons.noisy_ar,
          match=TestSCons.match_re_dotall)
 
+# Note that the generated .h files still get scanned twice,
+# but that's really once each as a child of libg_1.o and libg_2.o.
+#
+# TODO(sgk):  can the duplication be eliminated safely?  Batch build
+# support "eliminated" the duplication before in a way that broke a
+# use case that ended up in test/Depends/no-Builder.py (issue 2647).
+
 test.must_match("MyCScan.out", """\
 libg_1.c: 1
 libg_2.c: 1
 libg_3.c: 1
-libg_gx.h: 1
+libg_gx.h: 2
 libg_gy.h: 1
 libg_gz.h: 1
-libg_w.h: 1
+libg_w.h: 2
 """)
 
 test.pass_test()
